Adds links to other pages

--- a/csknight.dev/src/static/nav.html
+++ b/csknight.dev/src/static/nav.html
@@ -2,23 +2,23 @@
   <div class="container topnav" id="myTopnav">
     <div class="logo-icon-container">
       <div class="logo">
-        <a href="#" onclick="toggleDropdownMainMenu()">Chris Knight</a>
+        <a href="/" onclick="toggleDropdownMainMenu()">Chris Knight</a>
       </div>
       <a class="menu-icon" id="myIcon" onclick="toggleDropdownMainMenu()">
         <svg xmlns="http://www.w3.org/2000/svg" width="1.8rem" height="1.8rem" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" type="Menu"><line x1="2" x2="22" y1="6" y2="6"></line><line x1="2" x2="22" y1="14" y2="14"></line><line x1="2" x2="22" y1="22" y2="22"></line></svg>
       </a>
     </div>
     <div class="menu">
-      <a class="menu-item" href="#resume" onclick="toggleDropdownMainMenu()">Resume</a>
-      <a class="menu-item" href="#about" onclick="toggleDropdownMainMenu()">About</a>
-      <a class="menu-item" href="#blog" onclick="toggleDropdownMainMenu()">Blog</a>
+      <a class="menu-item" href="/resume" onclick="toggleDropdownMainMenu()">Resume</a>
+      <a class="menu-item" href="/about" onclick="toggleDropdownMainMenu()">About</a>
+      <a class="menu-item" href="/blog" onclick="toggleDropdownMainMenu()">Blog</a>
       <div class="dropdown" id="myDropdown" onclick="toggleDropdownSubMenu()">
         <div class="dropbtn menu-item">Other<svg role="img" class="caret-icon"><use xlink:href="../assets/img/svg/sprites.svg#caret-down"/></svg>
         </div>
         <div class="dropdown-content">
-          <a class="menu-item" href="#projects" onclick="toggleDropdownMainMenu()">Projects</a>
-          <a class="menu-item" href="#tools" onclick="toggleDropdownMainMenu()">Tools</a>
-          <a class="menu-item" href="#quotes" onclick="toggleDropdownMainMenu()">Quotes</a>
+          <a class="menu-item" href="/projects" onclick="toggleDropdownMainMenu()">Projects</a>
+          <a class="menu-item" href="/tools" onclick="toggleDropdownMainMenu()">Tools</a>
+          <a class="menu-item" href="/quotes" onclick="toggleDropdownMainMenu()">Quotes</a>
           <!-- <a class="menu-item" href="/photography" onclick="mytopnav.menuIsOpen ? toggleDropdownMainMenu() : {}">Photography</a> -->
         </div>
       </div>
