Increases css specificity for nav and footer links

--- a/csknight.dev/src/static/nav.html
+++ b/csknight.dev/src/static/nav.html
@@ -13,8 +13,7 @@
       <a class="menu-item" href="/about" onclick="toggleDropdownMainMenu()">About</a>
       <a class="menu-item" href="/blog" onclick="toggleDropdownMainMenu()">Blog</a>
       <div class="dropdown" id="myDropdown" onclick="toggleDropdownSubMenu()">
-        <div class="dropbtn menu-item">Other<svg role="img" class="caret-icon"><use xlink:href="../assets/img/svg/sprites.svg#caret-down"/></svg>
-        </div>
+        <div class="dropbtn menu-item">Other<svg role="img" class="caret-icon"><use xlink:href="../assets/img/svg/sprites.svg#caret-down"/></svg></div>
         <div class="dropdown-content">
           <a class="menu-item" href="/projects" onclick="toggleDropdownMainMenu()">Projects</a>
           <a class="menu-item" href="/tools" onclick="toggleDropdownMainMenu()">Tools</a>
